--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,6 +1,6 @@
 # 开发环境配置
 # 数据源配置，请修改为你项目的实际配置
-spring.datasource.url=jdbc:mysql://localhost:3306/test
-spring.datasource.username=root
-spring.datasource.password=123456
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:oracle:thin:@222.11.11.140:1521:hnsitest
+spring.datasource.username=hnsitest
+spring.datasource.password=test
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
